prevent wrapping in input groups and elsewhere. #122.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 .navbar .row {
-	flex-wrap: nowrap;
 	align-items: baseline;
 	padding-bottom: 0;
 	border-bottom: 3px solid var(--invest-green);
